syntax = "proto3";

package dekra.regulations.standards.v1;

option java_package = "com.paravai.regulations.standards.api.grpc.v1";
option java_multiple_files = true;
option java_outer_classname = "StandardQueryServiceProto";

import "standards_v1.proto";

service StandardQueryService {
  rpc GetStandardById (GetStandardByIdRequest) returns (GetStandardByIdResponse);

  rpc SearchStandards (SearchStandardsRequest) returns (SearchStandardsResponse);
}

message GetStandardByIdRequest {
  string standard_id = 1;
}

message GetStandardByIdResponse {
  Standard standard = 1;
}

message SearchStandardsRequest {
  string search = 1;
  int32 page = 2;          // 1-based
  int32 size = 3;          // max 200
  string sort = 4;
  map<string,string> filters = 5;
}

message SearchStandardsResponse {
  repeated Standard items = 1;
  int64 total = 2;
  int32 page = 3;
  int32 size = 4;
}